package characters;

public enum Feeling {
    NORMAL,
    FEAR,
    HAPPY,
    SAD,
    EXCITED
}
