package characters;

public enum Wish {
    FLY,
    EXPLORE,
    RELAX,
    TRAVEL,
    INVENT,
    DRIVE
}
