package transport;

public class ModifiedWaterEngine extends WaterEngine {

    public ModifiedWaterEngine(Parameters params) {
        super(EngineTypes.MODIFIED_WATER_ENGINE, params);
    }
}
